fixed project delete dialog not showing
-moved delete dialog to project controller
-removed delete directive

--- a/assets/app/stylesheets/_custom.scss
+++ b/assets/app/stylesheets/_custom.scss
@@ -8,7 +8,7 @@ $warning-color: #FFFFFA;
 // VARIABLES
 $left-sidenav-width: 200px;
 $widget-height: 175px;
-$card-width: 275px;
+$card-width: 300px;
 $font-weight-bold: 600;
 $font-size-large: 22px;
 
